--- a/mini card project/card_project.html
+++ b/mini card project/card_project.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile Card Mini Project </title>
-  <link rel="stylesheet" href="~profile_style.css">
+  <link rel="stylesheet" href="profile_style.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 
   <section class="profile-card">
     <div class="badge">⭐</div>
-    <img src="palak khare.jpeg" alt="Profile Picture" class="profile-img">
+    <img src="palak_img_passport.jpg" alt="Profile Picture" class="profile-img">
     <h2 class="name ">Palak Khare </h2>
     <p class="bio">
       I am a Computer Science student who is learning web development and programming. I enjoy writing code, learning
@@ -24,17 +24,17 @@
 
     <div class="stats">
       <div class="stat">
-        <h3>130</h3>
+        <h3>5</h3>
         <p>projects</p>
       </div>
 
-        <div>
-          <h3>130</h3>
+        <div class="stat">
+          <h3>10+</h3>
           <p>Clients</p>
         </div>
 
-        <div>
-          <h3>130</h3>
+        <div class="stat">
+          <h3>11</h3>
           <p>Awards</p>
       </div>
     </div>
